# sqlite-compress-encrypt-vfs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  RECONSTRUCTION.md  ROADMAP.md  build.rs  cbindgen.toml  turbolite.h
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
benches/: README.md
benchmark/: Dockerfile.lambda  Dockerfile.lambda-fast  README.md  fly.toml  quick-bench.rs  tiered-bench.rs  tiered-tune.rs  tpch-bench.rs  turbolite-bench.rs  write-bench.rs
examples/: quick_bench.rs
examples/go/: local.go  tiered.go
fuzz/: Cargo.toml
fuzz/fuzz_targets/: vfs_operations.rs
src/: btree_walker.rs  dict.rs  ext.rs  ext_entry.c  ffi.rs  install.rs  install_hook.rs  lib.rs  tiered.rs
src/tiered/: async_rt.rs  bench.rs  cache_tracking.rs  compact.rs  config.rs  disk_cache.rs  encoding.rs  flush.rs  handle.rs  import.rs  instrumented_storage.rs  keys.rs  local_state.rs  manifest.rs  mod.rs  page_storage.rs  prediction.rs  prefetch.rs  query_plan.rs  replay.rs  rotation.rs  s3_client.rs  sashimono.rs  settings.rs  staging.rs  storage.rs  storage_client.rs  test_cache_tracking.rs  test_config.rs  test_disk_cache.rs  test_encoding.rs  test_flush.rs  test_handle.rs  test_local_vfs.rs  test_manifest.rs  test_mod.rs  test_query_plan.rs  test_rotation.rs  test_storage_client.rs  vfs.rs  (+2 more)
tests/: CONTRACT_PROOFS.md  cli_integration.rs  cli_s3_test.rs  cli_test.rs  concurrent_test.rs  config_set_auto_install.rs  config_set_per_handle.rs  config_set_process_global_check.rs  crash_recovery_manifest.rs  differential_oracle.rs  ffi_test.rs  integration.rs  multiprocess_test.rs  profile_refresh_test.rs  sync_mode_semantics.rs  test_cross_connection_refresh.rs  test_ffi_python.py  test_loadable_ext.py  test_refresh_profiling.rs  tiered.rs  tiered_test.rs
tests/fixtures/: sashimono_checkpoint_v1.json  sashimono_delta_v1.json  sashimono_root_v1.json
tests/test_ffi_go/: main.go
tests/test_ffi_node/: test.mjs
tests/tiered/: advanced.rs  basic.rs  borodino.rs  btree_grouping.rs  compact.rs  concurrent_eviction.rs  crash_flush.rs  data_ops.rs  drift.rs  encryption.rs  eviction.rs  gc.rs  helpers.rs  indexes.rs  manifest_persistence.rs  materialize.rs  oracle_s3.rs  prediction.rs  snapshot_gc.rs  staging.rs  wal_integration.rs  zenith.rs
turbolite-ffi/: Cargo.toml  Makefile  build.rs  turbolite.h
turbolite-ffi/src/: ext.rs  ext_entry.c  ffi.rs
turbolite-ffi/tests/: ffi_test.rs  test_auto_extension_python.py  test_loadable_ext.py
