[package]
name = "sqlite-compress-encrypt-vfs"
version = "0.1.0"
edition = "2021"
description = "SQLCEs (cinco seis) - SQLite VFS with compression + encryption, custom compression dictionary support, WAL mode, full-text search"
license = "Apache-2.0"
repository = "https://github.com/russellromney/sqlite-compress-encrypt-vfs"
keywords = ["sqlite", "compression", "encryption", "vfs", "zstd"]
categories = ["database", "compression", "cryptography"]

[features]
default = ["zstd"]
zstd = ["dep:zstd"]
lz4 = ["dep:lz4_flex"]
snappy = ["dep:snap"]
gzip = ["dep:flate2"]
encryption = ["dep:aes-gcm", "dep:sha2", "dep:rand"]

[dependencies]
sqlite-vfs = "0.2"
zstd = { version = "0.13", optional = true }
lz4_flex = { version = "0.11", optional = true }
snap = { version = "1.1", optional = true }
flate2 = { version = "1.0", optional = true }
thiserror = "1"
parking_lot = "0.12"

# Encryption (optional)
aes-gcm = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }
rand = { version = "0.8", optional = true }

# CLI dependencies
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.35", features = ["bundled"] }
tempfile = "3"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "vfs_benchmark"
harness = false

[[bin]]
name = "sqlces"
path = "bin/sqlces.rs"

[[bin]]
name = "sqlces-bench"
path = "bin/sqlces-bench.rs"

[[bin]]
name = "test-plain-sqlite"
path = "bin/test-plain-sqlite.rs"

[[bin]]
name = "diagnose-write"
path = "bin/diagnose-write.rs"

[[bin]]
name = "trace-syncs"
path = "bin/trace-syncs.rs"

[[bin]]
name = "simple-bench"
path = "bin/simple-bench.rs"

[[bin]]
name = "debug-copy"
path = "bin/debug-copy.rs"
[[bin]]
name = "test-rusqlite-large"
path = "/tmp/test-rusqlite-large.rs"

[[bin]]
name = "test-vfs-passthrough"
path = "bin/test-vfs-passthrough.rs"

[[bin]]
name = "basic-write-test"
path = "bin/basic-write-test.rs"
