[package]
name = "sqlite-compress-encrypt-vfs"
version = "0.1.0"
edition = "2021"
description = "SQLCEs (cinco seis) - SQLite VFS with compression + encryption, custom compression dictionary support, WAL mode, full-text search"
license = "Apache-2.0"
repository = "https://github.com/russellromney/sqlite-compress-encrypt-vfs"
keywords = ["sqlite", "compression", "encryption", "vfs", "zstd"]
categories = ["database", "compression", "cryptography"]

[features]
default = ["zstd"]
zstd = ["dep:zstd"]
lz4 = ["dep:lz4_flex"]
snappy = ["dep:snap"]
gzip = ["dep:flate2"]
encryption = ["dep:aes-gcm", "dep:aes", "dep:ctr", "dep:sha2", "dep:rand"]
parallel = ["dep:rayon"]

[dependencies]
sqlite-vfs = "0.2"
zstd = { version = "0.13", optional = true }
lz4_flex = { version = "0.11", optional = true }
snap = { version = "1.1", optional = true }
flate2 = { version = "1.0", optional = true }
thiserror = "1"
parking_lot = "0.12"
fs2 = "0.4"
file-guard = "0.2"

# Encryption (optional)
aes-gcm = { version = "0.10", optional = true }
aes = { version = "0.8", optional = true }
ctr = { version = "0.9", optional = true }
sha2 = { version = "0.10", optional = true }
rand = { version = "0.8", optional = true }

# Parallel compression (optional)
rayon = { version = "1.10", optional = true }

# CLI dependencies
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.35", features = ["bundled"] }
tempfile = "3"

[dev-dependencies]
rayon = "1.10"

[[bin]]
name = "sqlces"
path = "bin/sqlces.rs"

[[bin]]
name = "sqlces-bench"
path = "bin/sqlces-bench.rs"
